# boogeyman

./: .gitignore  README.md  pyproject.toml
benchmark/: metrics.py  mutate.py  run.py
benchmark/corpus/: samples.py
docs/: results.md  writeup.md
src/boogeyman/: cli.py  context.py  diff.py  llm.py  models.py
src/boogeyman/retrieval/: corpus.py  embed.py  index.py  seeds.py
