[project]
name = "boogeyman"
version = "0.1.0"
description = "Boogeyman: bugs' worst nightmare — a local, explainable LLM code-review assistant"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "ollama>=0.4",
    "pydantic>=2",
    "faiss-cpu>=1.14.3",
    "numpy>=2.5.1",
]

[project.scripts]
boogeyman = "boogeyman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boogeyman"]
